--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
             ./img/escritorio-1600w.webp 1600w
           "
           sizes="(max-width: 720px) 100vw, (max-width: 1024px) 100vw, 100vw"
-          alt="Trius Capital"
+          alt="Escritório Trius Capital"
           loading="lazy"
           crossorigin="anonymous"
         />
