--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
             <li><a data-translate="menuParceriasGlobais" href="#parcerias-globais">Parcerias Globais</a></li>
             <li><a data-translate="menuQuemSomos" href="#quemsomos">Quem Somos</a></li>
             <li><a data-translate="menuOQueFazemos" href="#oquefazemos">O que Fazemos</a></li>
-            <li><a data-translate="menuCompliance"" href="#complaince">Complaince</a></li>
+            <li><a data-translate="menuCompliance"" href="#complaince">Compliance</a></li>
             <li><a data-translate="menuContato" href="#contato">Contato</a></li>
             <!-- Botão de alternância de idioma -->
             <li class="language-switch">
