--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
             <li><a data-translate="menuParceriasGlobais" href="#parcerias-globais">Parcerias Globais</a></li>
             <li><a data-translate="menuQuemSomos" href="#quemsomos">Quem Somos</a></li>
             <li><a data-translate="menuOQueFazemos" href="#oquefazemos">O que Fazemos</a></li>
-            <li><a data-translate="menuCompliance"" href="#complaince">Complaince</a></li>
+            <li><a data-translate="menuCompliance"" href="#complaince">Compliance</a></li>
             <li><a data-translate="menuContato" href="#contato">Contato</a></li>
             <!-- Botão de alternância de idioma -->
             <li class="language-switch">
@@ -90,9 +90,9 @@
                   <p data-translate="institucionalDescricao3">Com um legado de mais de duas décadas de atuação, a Trius Capital se destaca como uma gestora independente de vanguarda em investimentos alternativos. A gestora reúne um time de especialistas no mercado financeiro com mais de duas décadas de experiência nos segmentos de  infraestrutura, crédito e real estate.</p>
                 </div>
                 <div>
-                  <p data-translate="institucionalDescricao4">Com operação Global, a Trius marca presença em mercados estratégicos, como São Paulo, Singapura, Londres, Nova York e Madrid. Nossa atuação, privilegia a integridade,a inovação e os resultados consistentes a longo prazo.</p>
+                  <p data-translate="institucionalDescricao4">Com operação Global, a Trius marca presença em mercados estratégicos, como São Paulo, Singapura, Londres, Califórnia, Nova York e Madrid. Nossa atuação, privilegia a integridade,a inovação e os resultados consistentes a longo prazo.</p>
                   <p data-translate="institucionalDescricao5">Nossa expertise se concentra em desenvolver soluções personalizadas para investidores com visão de longo prazo, buscando não apenas exceder em retornos, mas garantir consistência, otimizar a eficiência tributária e fomentar a sustentabilidade e o crescimento do patrimônio ao longo do tempo.</p>
-                  <p data-translate="institucionalDescricao6">dotamos estratégias comerciais que agregam valor por meio da descorrelação com mercados tradicionais e alinhamento com as tendências da economia global.</p>
+                  <p data-translate="institucionalDescricao6">Adotamos estratégias comerciais que agregam valor por meio da descorrelação com mercados tradicionais e alinhamento com as tendências da economia global.</p>
                 </div> 
               </div>    
 
