--- a/src/index.html
+++ b/src/index.html
@@ -1226,7 +1226,8 @@
                 <ul>
                   <li>+55 11 3759-4800</li>
                   <li><a href="mailto:contato@triuscapital.com">contato@triuscapital.com</a></li>
-                  <li><a href="./ouvidoria.html">Canal de Ouvidoria</a></li>
+                  <li><a href="mailto:ouvidoria@triuscapital.com">ouvidoria@triuscapital.com</a></li>
+                  <li><a href="./ouvidoria.html">Canal de Denúncias</a></li>
                 </ul>
                   <p data-translate="endereco">Capital Building<br>
                     Cidade Jardim Corporate Center<br>
